# amm-library

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
IDL/: AMM_Extended.idl  AMM_Standard.idl  CMakeLists.txt
IDL/output/: AMM_Standard.cxx  AMM_Standard.h  AMM_StandardCdrAux.hpp  AMM_StandardCdrAux.ipp  AMM_StandardPubSubTypes.h
cmake/: Packing.cmake  osmacros.cmake
doc/: CMakeLists.txt  Doxyfile.in  main.md
src/: CMakeLists.txt  amm_std.h
src/AMM/: AMM_Extended.cxx  AMM_Extended.h  AMM_ExtendedPubSubTypes.cxx  AMM_ExtendedPubSubTypes.h  AMM_Standard.cxx  AMM_Standard.h  AMM_StandardPubSubTypes.cxx  AMM_StandardPubSubTypes.h  AmmDataType.h  BaseLogger.h  DDSManager.h  DDSManager2.h  DDS_Listeners.cpp  DDS_Listeners.h  DDS_Log_Appender.h  ListenerInterface.h  Utility.cpp  Utility.h
src/amm/: AMM_Extended.cxx  AMM_Extended.h  AMM_ExtendedCdrAux.hpp  AMM_ExtendedCdrAux.ipp  AMM_ExtendedPubSubTypes.cxx  AMM_ExtendedPubSubTypes.h  AMM_Standard.cxx  AMM_Standard.h  AMM_StandardCdrAux.hpp  AMM_StandardCdrAux.ipp  AMM_StandardPubSubTypes.cxx  AMM_StandardPubSubTypes.h  AmmDataType.h  BaseLogger.cpp  DDSManager.h  DDS_Listeners.cpp  DDS_Listeners.h  ListenerInterface.h  TopicNames.h  Utility.cpp  Utility.h
tmp/: AMM_StandardPubSubMain.cxx  AMM_StandardPublisher.cxx  AMM_StandardPublisher.h  AMM_StandardSubscriber.cxx  AMM_StandardSubscriber.h  CMakeLists.txt
